src/app/data-portal-details/data-portal-details.component.css
.text-center {
    text-align: center!important;
}

.card-header,
.btn-success,
.badge-success {
    background-color: #8FBC45;
}

.btn-primary,
.active {
    background-color: #4BBEFD;
}

.page-header {
    color: #4BBEFD;
}

.mat-form-field {
    font-size: 14px;
    width: 100%;
}

.disp {
    display: block !important;
}

.non-disp {
    display: none !important;
}

.txt-center {
    text-align: center;
  
}
button {
    margin-left: 5px;
}

/* .mat-header-cell {
    text-align: center;
} */

.inactiveFilter {
    pointer-events: none;
    cursor: default;
}

.assemblies-font {
    font-size: 13px;
}

.mat-header-row,
.mat-row {
    min-height: 30px;
}

.goat-color {
    color: #fff;
    background-color: #4BBEFD;
}

.blue-text {
    font-size: 1em;
    color: #007c82!important;
}

table {
    width: 100%;
}

.mat-row {
    height: auto;
}

.mat-cell {
    padding: 8px 8px 8px 0;
    word-break: break-word;
}

.table-container {
    overflow: scroll;
}

.goat-color2 {
    color: #fff;
    background-color: #5cc45e;
    margin-left: 3px;
}

.genome {
    color: #fff;
    background-color: grey;
    margin-left: 3px;
}

.figpanel {
    display: block !important;
    /* width: 69%; */
    /* background: #eee; */
    padding: 20px;
    margin: 20px 0;
    border-radius: 3px;
}

.tab-box {
    padding-right: 2px;
    padding-left: 2px;
}

.goat-box {
    padding-right: 2px;
    padding-left: 2px;
    padding-bottom: 2px;
}

.org-filter {
    padding-left: 6px;
}

.search-bar {
    margin-top: 15px;
    width: 100%;
}

.download-metadata-btn {
    float: right;
    background-color: #4BBEFD;
    color: #ffffff;
}

.relatedOrganismsTable mat-header-cell {
    text-align: center;
    justify-content: center;
}

.relatedOrganismsTable mat-cell {
    padding: 8px 8px 8px 0;
    word-break: break-word;
}

.annotationTable mat-header-cell {
    text-align: left;
    padding: 8px 8px 8px 8px;
}

.annotationTable mat-cell {
    padding: 8px 8px 8px 8px;
    word-break: break-word;
}

.relatedAssembliesTable mat-header-cell {
    text-align: left;
    padding: 8px 8px 8px 8px;
}

.relatedAssembliesTable mat-cell {
    padding: 8px 8px 8px 8px;
    word-break: break-word;
}

.relatedFilesTable mat-header-cell {
    text-align: center;
    justify-content: center;
}

.relatedFilesTable mat-cell {
    padding: 8px 8px 8px 0;
    word-break: break-word;
    text-align: center;
    justify-content: center;
}


.genomeStatsTable mat-header-cell {
    text-align: left;
    padding: 8px 8px 8px 8px;
}

.genomeStatsTable mat-cell {
    padding: 8px 8px 8px 8px;
    word-break: break-word;
}

.dark_text_chip {
    color: #212529;
    font-size: 10px;
}

.white_text_chip {
    color: #fff;
    font-size: 10px;
}

.caption-div {
    padding-top: 15px;
}

/* Popup Overlay */
.popup-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.8);
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000;
    overflow: auto;
}

.popup-content {
    display: flex;
    justify-content: center;
    align-items: center;
    max-width: 90vw;
    max-height: 90vh;
}

.popup-image {
    width: auto;
    height: auto;
    max-width: 100%;
    max-height: 100vh;
    object-fit: contain;
    border-radius: 10px;
    box-shadow: 0px 4px 20px rgba(255, 255, 255, 0.2);
    animation: fadeIn 0.3s ease-in-out;
}


@keyframes fadeIn {
    from {
        opacity: 0;
        transform: scale(0.8);
    }
    to {
        opacity: 1;
        transform: scale(1);
    }
}

